--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Strategy. Visibility. Implementation">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="favicon.png">
 
