--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Strategy. Visibility. Implementation">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="//fonts.googleapis.com/css?family=Amiri" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="favicon.png">
 
@@ -14,28 +14,51 @@
 <body>
   <div class="container">
     <div class="header">
+      <hr>
       <div class="header-text">
-        <h1>Edelman Partners</h1>
-        <h2 class="subtitle">Consulting</h2>
-        <h2>Strategy. Visibility. Implementation.</h2>
+        <h1><span>Edelman Partners</span> &nbsp;&nbsp;<span style="color:#7D7D7D;">Leadership Consulting</span></h1>
       </div>
+      <img class="header-image" src="sherrerd_wide.jpg" />
+      <p class="tagline">
+        Edelman Partners works with leaders to clarify their organization’s mission, set priorities, pursue innovative strategies to implement change, and raise the profile of their organization.
+      </p>
     </div>
-    <div class="bio">
-      <image src="pamela_edelman.jpg" alt="Pamela Edelman" class="pic" />
+    <div class="content">
+      <hr>
+      <p>
+        Edelman Partners assesses organizational and leadership capabilities, and facilitates the articulation of goals and the development of strategic plans for implementation. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
+      </p>
+      <p>
+        We help leaders and their organizations:
+      </p>
+      <ul>
+        <li>Refine and articulate mission, goals and core strengths</li>
+        <li>Understand capabilities, competencies, and patterns of performance</li>
+        <li>Realign organizational structure to achieve goals</li>
+        <li>Increase understanding of stakeholders by collecting and analyzing data</li>
+        <li>Develop programs and events to engage stakeholders</li>
+        <li>Raise visibility through visual identity, presentations, conferences, etc.</li>
+      </ul>
+      <p>
+        Our clients are primarily leaders in academic research institutions.
+      </p>
+      <hr>
+      <image src="pamela_edelman_small.jpg" alt="Pamela Edelman" class="pic" />
       <!-- Photography credit: Helen Lin -->
       <div class="bio-text">
         <h2>Pamela Edelman</h2>
-        <p>President</p>
+        <p>Managing Partner</p>
       </div>
       <br style="clear: left;" />
-    </div>
+      <hr>
     <div class="contact">
       <h2>Contact Us</h2>
       <p><a href="mailto:info@edelmanpartners.com">info@edelmanpartners.com</a></p>
       <div class="copyright">
-        &#169 2018 Edelman Partners
+        © 2019 Edelman Partners
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
