update title size on mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <hr>
       <div class="header-text">
-        <h1><span>Edelman Partners</span> &nbsp;&nbsp;<span style="color:#7D7D7D;">Leadership Consulting</span></h1>
+        <h1><span>Edelman Partners</span> &nbsp;&nbsp;<span class="subtitle">Leadership Consulting</span></h1>
       </div>
       <img class="header-image" src="sherrerd_wide.jpg" />
       <p class="tagline">
