--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <div class="container">
     <div class="header">
-      <hr>
+      <hr class="topbar">
       <div class="header-text">
-        <h1><span>Edelman Partners</span> &nbsp;&nbsp;<span class="subtitle">Leadership Consulting</span></h1>
+        <h1><span>Edelman Partners</span><span class="subtitle">Leadership Consulting</span></h1>
       </div>
       <img class="header-image" src="sherrerd_wide.jpg" />
       <p class="tagline">
