mention work with Princeton University clients

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li>Raise visibility through visual identity, presentations, conferences, etc.</li>
       </ul>
       <p>
-        Our clients are primarily leaders in academic research institutions.
+         Our clients are leaders in academic research institutions, including centers and institutes at Princeton University.
       </p>
       <hr>
       <image src="pamela_edelman_small.jpg" alt="Pamela Edelman" class="pic" />
