--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <div class="content">
       <hr>
       <p>
-        Edelman Partners assesses organizational and leadership capabilities, and facilitates the articulation of goals and the development of strategic plans for implementation. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
+        Edelman Partners assesses organizational and leadership capabilities, and facilitates the prioritization and articulation of goals and the development of strategic plans for implementation. We help organizations align their strategic goals with a leadership framework in support of their mission. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
       </p>
       <p>
         We help leaders and their organizations:
       </p>
       <ul>
         <li>Refine and articulate mission, goals and core strengths</li>
-        <li>Understand capabilities, competencies, and patterns of performance</li>
+        <li>Understand leadership and management capabilities, competencies, and patterns of performance</li>
         <li>Realign organizational structure to achieve goals</li>
         <li>Increase understanding of stakeholders by collecting and analyzing data</li>
         <li>Develop programs and events to engage stakeholders</li>
         <li>Raise visibility through visual identity, presentations, conferences, etc.</li>
       </ul>
       <p>
-         Our clients are leaders in academic research institutions, including centers and institutes at Princeton University.
+         Our work supports leaders in academic research institutions, including those at the institutional level and those leading centers, institutes and departments.
       </p>
       <hr>
       <image src="pamela_edelman_small.jpg" alt="Pamela Edelman" class="pic" />
