--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="content">
       <hr>
       <p>
-        Edelman Partners assesses organizational and leadership capabilities, and facilitates the prioritization and articulation of goals and the development of strategic plans for implementation. We help organizations align their strategic goals with a leadership framework in support of their mission. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
+        Edelman Partners assesses organizational and leadership capabilities, and facilitates the prioritization of goals and the development of strategic plans for implementation. We help organizations align their strategic goals with a leadership framework in support of their mission. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
       </p>
       <p>
         We help leaders and their organizations:
