--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         We help leaders and their organizations:
       </p>
       <ul>
-        <li>Refine and articulate mission, goals and core strengths</li>
+        <li>Refine and articulate mission, goals, and core strengths</li>
         <li>Understand leadership and management capabilities, competencies, and patterns of performance</li>
-        <li>Realign organizational structure to achieve goals</li>
+        <li>Realign organizational resources and management processes</li>
         <li>Increase understanding of stakeholders by collecting and analyzing data</li>
         <li>Develop programs and events to engage stakeholders</li>
         <li>Raise visibility through visual identity, presentations, conferences, etc.</li>
       </ul>
       <p>
-         Our work supports leaders in academic research institutions, including those at the institutional level and those leading centers, institutes and departments.
+         Our work supports leaders in academic research institutions, including those at the institutional level and those leading centers, institutes, and departments.
       </p>
       <hr>
       <image src="pamela_edelman_small.jpg" alt="Pamela Edelman" class="pic" />
