increase resolution of headshot

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          Our work supports leaders in academic research institutions, including those at the institutional level and those leading centers, institutes, and departments.
       </p>
       <hr>
-      <image src="pamela_edelman_small.jpg" alt="Pamela Edelman" class="pic" />
+      <image src="pamela_edelman.jpg" alt="Pamela Edelman" class="pic" />
       <!-- Photography credit: Helen Lin -->
       <div class="bio-text">
         <h2>Pamela Edelman</h2>
