--- a/index.html
+++ b/index.html
@@ -20,27 +20,32 @@
       </div>
       <img class="header-image" src="sherrerd_wide.jpg" />
       <p class="tagline">
-        Edelman Partners works with leaders to clarify their organization’s mission, set priorities, pursue innovative strategies to implement change, and raise the profile of their organization.
+        Deep engagement and implementation work to help leaders realize their vision. We roll up our sleeves and work alongside our clients to make change happen.
       </p>
     </div>
     <div class="content">
       <hr>
       <p>
-        Edelman Partners assesses organizational and leadership capabilities, and facilitates the prioritization of goals and the development of strategic plans for implementation. We help organizations align their strategic goals with a leadership framework in support of their mission. Our clients gain insights into their organizations and themselves, and turn this knowledge into actionable steps to achieve measurable results. Our approach is collaborative and comprehensive. We support our clients through the implementation process while serving as coach, thought partner, and trusted adviser.
+        Edelman Partners helps leaders build their organizations’ capabilities. We do mission-driven work, aligning leadership priorities with day-to-day operations. Our approach is highly collaborative and comprehensive. We help our clients bring about transformational change, whether they are launching a new entity, looking to expand or pivot, or developing a special project. 
       </p>
       <p>
-        We help leaders and their organizations:
+        With broad experience working with groups across multiple disciplines, we bring a unique perspective and skillset to our clients’ leadership team to bring about lasting change. We excel at jumping in and getting up to speed quickly to manage operations for new entities and projects during critical and fast-paced launch phases.
+      </p>
+      <p>
+        Edelman Partners:
       </p>
       <ul>
-        <li>Refine and articulate mission, goals, and core strengths</li>
-        <li>Understand leadership and management capabilities, competencies, and patterns of performance</li>
-        <li>Realign organizational resources and management processes</li>
-        <li>Increase understanding of stakeholders by collecting and analyzing data</li>
-        <li>Develop programs and events to engage stakeholders</li>
-        <li>Raise visibility through visual identity, presentations, conferences, etc.</li>
+        <li>Refines and articulates mission, goals, and core strengths</li>
+        <li>Sets up scalable systems and processes</li>
+        <li>Realigns organizational resources and management processes</li>
+        <li>Manages change and transitions</li>
+        <li>Deepens relationships with stakeholders</li>
+        <li>Develops and executes plans for special projects, programs, activities, and events</li>
+        <li>Raises the visibility and profile of organizations</li>
+        <li>Delivers lasting results</li>
       </ul>
       <p>
-         Our work supports leaders in academic research institutions, including those at the institutional level and those leading centers, institutes, and departments.
+        Our work supports leaders in academic research institutions, including those leading schools, centers, institutes, and departments.
       </p>
       <hr>
       <image src="pamela_edelman.jpg" alt="Pamela Edelman" class="pic" />
