higher resolution header image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="header-text">
         <h1><span>Edelman Partners</span><span class="subtitle">Leadership Consulting</span></h1>
       </div>
-      <img class="header-image" src="sherrerd_wide.jpg" />
+      <img class="header-image" src="sherrerd_wide_2.jpg" />
       <p class="tagline">
         Deep engagement and implementation work to help leaders realize their vision. We roll up our sleeves and work alongside our clients to make change happen.
       </p>
