--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
         <h1><span>Edelman Partners</span><span class="subtitle">Leadership Consulting</span></h1>
       </div>
       <img class="header-image" src="sherrerd_wide_2.jpg" />
-      <p class="tagline">
-        Deep engagement and implementation work to help leaders realize their vision. We roll up our sleeves and work alongside our clients to make change happen.
-      </p>
+      <div class="tagline">
+        <p>
+          <em>Deep engagement and implementation work to help leaders realize their vision</em>
+        </p>
+        <p>
+          We roll up our sleeves and work alongside our clients to make change happen.
+        </p>
+      </div>
     </div>
     <div class="content">
       <hr>
@@ -29,7 +34,7 @@
         Edelman Partners helps leaders build their organizations’ capabilities. We do mission-driven work, aligning leadership priorities with day-to-day operations. Our approach is highly collaborative and comprehensive. We help our clients bring about transformational change, whether they are launching a new entity, looking to expand or pivot, or developing a special project. 
       </p>
       <p>
-        With broad experience working with groups across multiple disciplines, we bring a unique perspective and skillset to our clients’ leadership team to bring about lasting change. We excel at jumping in and getting up to speed quickly to manage operations for new entities and projects during critical and fast-paced launch phases.
+        With broad experience working with groups across multiple disciplines, we bring a unique perspective and skillset to our clients’ leadership teams to bring about lasting change. We excel at jumping in and getting up to speed quickly to manage operations for new entities and projects during critical and fast-paced launch phases.
       </p>
       <p>
         Edelman Partners:
