--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h2>Contact Us</h2>
       <p><a href="mailto:info@edelmanpartners.com">info@edelmanpartners.com</a></p>
       <div class="copyright">
-        © 2019 Edelman Partners
+        © 2019-2022 Edelman Partners
       </div>
     </div>
   </div>
