Added item to list

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li>Deepens relationships with stakeholders</li>
         <li>Develops and executes plans for special projects, programs, activities, and events</li>
         <li>Raises the visibility and profile of organizations</li>
+        <li>Provides interim leadership</li>
         <li>Delivers lasting results</li>
       </ul>
       <p>
