add LinkedIn; reduce font size; remove unused image

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <div class="bio-text">
         <h2>Pamela Edelman</h2>
         <p>Managing Partner</p>
+        <a href="https://www.linkedin.com/in/pamela-edelman/">
+          LinkedIn
+        </a>
       </div>
       <br style="clear: left;" />
       <hr>
