Changed "and" to "&"

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
       <hr class="topbar">
       <div class="header-text">
-        <h1><span>Edelman Partners</span><span class="subtitle">Strategy and Operations Consulting</span></h1>
+        <h1><span>Edelman Partners</span><span class="subtitle">Strategy & Operations Consulting</span></h1>
       </div>
       <img class="header-image" src="sherrerd_wide_2.jpg" />
       <div class="tagline">
