--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
   <main>
     <section>
       <div class="container">
+        <h1>About</h1>
+        <p>
+          Edelman Partners is a boutique consultancy founded by Pamela Edelman. Pam partners with mission-driven organizations to advance research and innovation in science, engineering, and technology–specializing in strategic leadership, operational alignment, and high-stakes initiative development.
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
         <h1>Strategic Planning</h1>
         <p>
           Developing a compelling vision is only the beginning. Turning that vision into a strategy that earns institutional support and drives long-term growth requires clarity, coordination, and momentum. Pam has led planning processes resulting in the approval and expansion of interdisciplinary efforts—from AI and health to environmental research—translating early-stage ideas into roadmaps for investment, scale, and sustainability.
