change hyphen to em dash

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="container">
         <h1>About</h1>
         <p>
-          Edelman Partners is a boutique consultancy founded by Pamela Edelman. Pam partners with mission-driven organizations to advance research and innovation in science, engineering, and technology–specializing in strategic leadership, operational alignment, and high-stakes initiative development.
+          Edelman Partners is a boutique consultancy founded by Pamela Edelman. Pam partners with mission-driven organizations to advance research and innovation in science, engineering, and technology—specializing in strategic leadership, operational alignment, and high-stakes initiative development.
         </p>
       </div>
     </section>
