--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Edelman Partners</title>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Stint+Ultra+Expanded&family=Montserrat:wght@300&family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <style>
     /* Base font sizing: default on mobile/tablet, 115% on desktop */
     html { font-size: 100%; }
