change to Initiative Launching

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <section>
       <div class="container">
-        <h1>Launching Initiatives</h1>
+        <h1>Initiative Launches</h1>
         <p>
           New organizations and initiatives gain traction when launched with strong operational foundations. Pam defines scope, structures teams, establishes administrative models, and coordinates communications for high-profile launches. Her approach ensures each effort is positioned for visibility, credibility, and organizational readiness from day one.
         </p>
