replace institutional with organizational
Change institutional support to organizational support

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="container">
         <h1>Strategic Planning</h1>
         <p>
-          Developing a compelling vision is only the beginning. Turning that vision into a strategy that earns institutional support and drives long-term growth requires clarity, coordination, and momentum. Pam has led planning processes resulting in the approval and expansion of interdisciplinary efforts—from AI and health to environmental research—translating early-stage ideas into roadmaps for investment, scale, and sustainability.
+          Developing a compelling vision is only the beginning. Turning that vision into a strategy that earns organizational support and drives long-term growth requires clarity, coordination, and momentum. Pam has led planning processes resulting in the approval and expansion of interdisciplinary efforts—from AI and health to environmental research—translating early-stage ideas into roadmaps for investment, scale, and sustainability.
         </p>
       </div>
     </section>
