change to organizational goals from institutional
Senior leaders often face the challenge of communicating priorities in ways that align with organizational goals

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="container">
         <h1>Institutional Positioning</h1>
         <p>
-          Senior leaders often face the challenge of communicating priorities in ways that align with institutional goals and resonate with those who fund or support their work. Pam serves as a strategic partner in that process—helping shape messaging, develop cases for support, and craft narratives that convey vision with clarity and credibility.
+          Senior leaders often face the challenge of communicating priorities in ways that align with organizational goals and resonate with those who fund or support their work. Pam serves as a strategic partner in that process—helping shape messaging, develop cases for support, and craft narratives that convey vision with clarity and credibility.
         </p>
       </div>
     </section>
