About: In her work, Pam steps into Chief of Staff, Strategy...

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="container">
         <h1>About</h1>
         <p>
-          Edelman Partners is a boutique consultancy founded by Pamela Edelman. Pam partners with mission-driven organizations to advance research and innovation in science, engineering, and technology—specializing in strategic leadership, operational alignment, and high-stakes initiative development. Pam serves as Chief of Staff, Chief Strategy Officer, and Head of Operations capacities, as well as Special Projects Lead.
+          Edelman Partners is a boutique consultancy founded by Pamela Edelman. Pam partners with mission-driven organizations to advance research and innovation in science, engineering, and technology—specializing in strategic leadership, operational alignment, and high-stakes initiative development. In her work, Pam steps into Chief of Staff, Strategy, and Operations roles, as well as serving as a trusted lead for high-stakes special projects.
         </p>
       </div>
     </section>
